# py4mac.github.io

./: .gitignore  404.html  CNAME  Makefile  README.md  _config.yml  config.toml  index.html  index.xml  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: doc.yml
blogs/: index.html
categories/: index.html  index.xml
contact/: index.html
content/posts/: cnn.md  customer.md  kaggle.md  lgbsttracker.md  movies.md  nlp.md
css/: main.min.f1e13310dc798902b063bdb8d7e251c628f21f262b5d9dbdecaec413206618bc.css  style.css
datasciences/cnn/: index.html
datasciences/customer/: index.html
datasciences/kaggle/: index.html
datasciences/movies/: index.html
datasciences/nlp/: index.html
docs/: CNAME  blogs.md  contact.md  index.md  news.md  skills.md
docs/datasciences/: cnn.md  customer.md  kaggle.md  movies.md  nlp.md
docs/iot/: lgbsttracker.md
docs/projects/: 1-softwares.md  2-datasciences.md  datasciences_courses.md  kaggle.md  softwares.md
docs/stylesheets/: extra.css
iot/lgbsttracker/: index.html
news/: index.html
page/1/: index.html
posts/: index.html  index.xml
posts/cnn/: index.html
posts/customer/: index.html
posts/kaggle/: index.html
posts/lgbsttracker/: index.html
posts/movies/: index.html
posts/nlp/: index.html
projects/1-softwares/: index.html
projects/2-datasciences/: index.html
projects/datasciences_courses/: index.html
projects/kaggle/: index.html
projects/softwares/: index.html
search/: search_index.json
skills/: index.html
stylesheets/: extra.css
tags/: index.html  index.xml
(+6 files in other folders)
