[tool.poetry]
name = "website"
version = "1.0.0"
description = "My personal website for py4mac.com"
authors = ["Pierre-Yves BOISBUNON <boisbu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
pymdown-extensions = "^6.2.1"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
