[tool.poetry]
name = "website"
version = "1.0.0"
description = "My personal website for py4mac.com"
authors = ["Pierre-Yves BOISBUNON <boisbu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs-material = "^6.2.5"
markdown-include = "^0.6.0"
mkdocs-awesome-pages-plugin = "^2.5.0"
mkdocs-material-extensions = "^1.0.1"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
